--- a/JobX2/app/src/main/AndroidManifest.xml
+++ b/JobX2/app/src/main/AndroidManifest.xml
@@ -10,6 +10,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.JobX">
         <activity
+            android:name=".electricianView"
+            android:exported="false" />
+        <activity
             android:name=".OccupationTypes"
             android:exported="false" />
         <activity
