Part Time and Full Time Confirmation Page

--- a/JobX2/app/src/main/AndroidManifest.xml
+++ b/JobX2/app/src/main/AndroidManifest.xml
@@ -10,6 +10,12 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.JobX">
         <activity
+            android:name=".fullTimeConfirm"
+            android:exported="false" />
+        <activity
+            android:name=".partTimeConfirm"
+            android:exported="false" />
+        <activity
             android:name=".electricianView"
             android:exported="false" />
         <activity
