--- a/JobX2/app/src/main/AndroidManifest.xml
+++ b/JobX2/app/src/main/AndroidManifest.xml
@@ -2,7 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.jobx">
 
-    <uses-permission android:name="android.permission.SEND_SMS"/>
+    <uses-permission android:name="android.permission.SEND_SMS" />
 
     <application
         android:allowBackup="true"
@@ -11,6 +11,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.JobX">
+        <activity
+            android:name=".EmployeeVerification"
+            android:exported="false" />
         <activity
             android:name=".ContactEmployee"
             android:exported="false" />
